fix: upgrade cross-spawn to 7.0.6 (CVE-2024-21538)

--- a/npm-distribution/package.json
+++ b/npm-distribution/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "tar": "^7.1.0"
   },
+  "overrides": {
+    "cross-spawn": "^7.0.5"
+  },
   "devDependencies": {
     "@types/tar": "6.1.13"
   },
