--- a/npm-distribution/package.json
+++ b/npm-distribution/package.json
@@ -20,7 +20,9 @@
     "tar": "^7.1.0"
   },
   "overrides": {
-    "cross-spawn": "^7.0.5"
+    "cross-spawn": "^7.0.5",
+    "glob": "^10.5.0",
+    "brace-expansion": "^2.0.2"
   },
   "devDependencies": {
     "@types/tar": "6.1.13"
